@@ -77,6 +77,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Inno                   Thomas Klinger
 - Java 5                 Clemens Bruckmann
 - Javascript             Ben Keen
+- KiXtart                Riley McArdle
 - LaTeX                  Matthais Pospiech
 - Lisp                   Roberto Rossi
 - Lua                    Roberto Rossi
